cicd/dev/ioc-v3-fe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ioc-haiphong-fe
    labels:
        app: ioc-haiphong-fe
    namespace: ioc20productv3
spec:
    replicas: 1
    selector:
        matchLabels:
            app: ioc-haiphong-fe
    template:
        metadata:
            labels:
                name: ioc-haiphong-fe
                app: ioc-haiphong-fe
        spec:
            containers:
                - name: ioc-haiphong-fe
                  image: harbor.smartcity-cloud.org/ioc/iocv3-webapp-hp:08072024v1
                  ports:
                      - containerPort: 80
                        protocol: TCP
                  volumeMounts:
                      - mountPath: /etc/nginx/conf.d
                        subPath: nginx
                        name: ioc-v3-fe-storage
            restartPolicy: Always
            volumes:
                - name: ioc-v3-fe-storage
                  persistentVolumeClaim:
                      claimName: ioc-v3-fe-pvc
