cicd/dev/ioc-v3-fe-svc.yaml
apiVersion: v1
kind: Service
metadata:
    name: ioc-v3-fe-svc
    labels:
        app: ioc-v3-fe
    namespace: ioc20productv3
spec:
    type: NodePort
    ports:
        - name: http
          protocol: TCP
          port: 4200
          targetPort: 80
          nodePort: 8122
    selector:
        app: ioc-v3-fe
